--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Hello world
+<img style="text-align: center; top: 50%" alt= "Under Construction" src="http://static.digg.com/static/images/digger.gif">
