--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<img style="text-align: center; top: 50%" alt= "Under Construction" src="http://static.digg.com/static/images/digger.gif">
+<html>
+<head>
+<style type="text/css">
+body{
+	text-align: center;
+}
+
+img {
+	position: relative;
+	top: 40%;
+
+}
+
+</style>
+</head>
+<body>
+<img alt= "Under Construction" src="http://static.digg.com/static/images/digger.gif">
+</body>
+</html>
