--- a/index.html
+++ b/index.html
@@ -3,8 +3,69 @@
   <head>
     <meta charset="utf-8">
     <title>Alberto de la Cruz</title>
+    <style>
+    @import url(http://fonts.googleapis.com/css?family=Quattrocento:400,700);
+    html {
+      font-family: 'Quattrocento', Georgia, serif;
+    }
+    body {
+      margin: 0;
+      padding: 10%;
+    }
+    </style>
   </head>
   <body>
-    Hello world
+    <h1>Alberto Guillermo de la Cruz</h1>
+<h2>UI/UX Designer and Front End Developer</h2>
+
+<a href="#">Projects</a>
+<a href="#">Writings</a>
+<a href="#">CV</a>
+
+<p>I am a designer and developer from Puerto Rico now studying and working in NYC. Since I am versed in both the creative and technical sides of developing an application, I want to be closely involved with the user experience and implementation of client side interfaces. I am also interested in data visualization and interactive art.</p>
+
+<p>I am currently working on my BFA in Design from the School of Visual Arts and have recently completed a Front End Development Apprenticeship with Bloc.</p>
+
+<p>Outside of work I am an animation, comics and film buff. I used to study Illustration, but I also strongly considered going to school for Art History. I enjoy drinking craft beer and sake with friends and trying new types of cuisine. I love single player video games, although I haven’t been able to sit down and play in quite a long time.</p>
+
+<p>I can also be found on Twitter, GitHub, Tumblr and LinkedIn.</p>
+
+<hr>
+
+<h2>Projects</h2>
+
+<h3><a href="/projects/arroz-blanco">Arroz Blanco (T-Shirt and Sticker Design, Branding)</a></h3>
+<p>As a summer project, I sought to launch a t-shirt and sticker business and sell the merchandise in Puerto Rico Comic Con. Although the business wasn’t a success, this project is what got me interested in UI/UX Design.</p>
+
+<h3><a href="/projects/koloni">Koloni (UI/UX Design, Branding)</a></h3>
+<p>As a semester-long assignment I designed the screens, branding and marketing of a fictional microfinance app I named Koloni.</p>
+
+<h3><a href="#">Alice CRM System (UI/UX Design)</a></h3>
+<p>I was an intern at a hospitality startup called Alice. Being the only designer on the team at the time, they trusted me with a lot of responsibilities and one of my earliest projects there was to design a CRM system to be used by hotel concierge.</p>
+
+<h3><a href="#">Arithmatic (UI/UX Design)</a></h3>
+<p>Designed for my App Design class, Arithmatic is a fast paced, mobile game in which players solve arithmetic problems as quickly as possible. I’m interested in developing this concept further.</p>
+
+<h3><a href="#">BlocChat (Front End Development)</a></h3>
+<p>My first project in Bloc without training wheels, I built a real time chat room with Angular running on the client side and Firebase as persistent data.</p>
+
+<h3><a href="#">Header/Body Font ‘Randomizer’ (Front End Development)</a></h3>
+<p>A quick little project, I used Vanilla JS to write a script that lets users add Google Fonts to two sets of arrays of objects, one for header fonts and the other for body fonts. The script will ‘randomize’ the fonts displayed on the page.</p>
+
+<h3><a href="#">CRITlink (Front End Development, UI/UX Design)</a></h3>
+<p>A light version of InVision’s critiquing system, my goal was to allow users to upload images and be able to send that link to friends to get position based comments on the image. I also played around with jQuery UI to make all the elements on the page draggable.</p>
+
+<hr>
+
+<h2>Writings</h2>
+
+<h3><a href="#">Learning to Code at Bloc (July 19, 2015)</a></h3>
+<p>A retrospective of my time at Bloc, learning the ins and outs of software engineering. I talk about my expectations when I came into the program and my aspirations for the future after Bloc.</p>
+
+<h3><a href="#">Rekindling My Love of Learning (August 1, 2015)</a></h3>
+<p>In high school I was far from the best student. I was often gripped by fears of failing and would do the bare minimum in order to pass. Going to art school taught me to enjoy learning.</p>
+
+    <hr>
+    <p>Designed and Coded by Alberto G. de la Cruz</p>
   </body>
 </html>
