--- a/about/index.html
+++ b/about/index.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Alberto de la Cruz</title>
+    <style>
+    @import url(http://fonts.googleapis.com/css?family=Quattrocento:400,700);
+    html {
+      font-family: 'Quattrocento', Georgia, serif;
+    }
+    body {
+      margin: 0;
+      padding: 10%;
+    }
+    </style>
   </head>
   <body>
     About page, yo
+    <hr>
+    <p>Designed and Coded by Alberto G. de la Cruz</p>
   </body>
 </html>
