--- a/about/index.html
+++ b/about/index.html
@@ -10,13 +10,23 @@
     }
     body {
       margin: 0;
-      padding: 10%;
+      padding: 2% 8% 3% 8%;
+    }
+
+    .title-block {
+      display: inline-block;
+    }
+
+    .nav {
+      display: inline-block;
+      margin: 0;
+      padding: 0 10px 0 0;
     }
     </style>
   </head>
   <body>
     About page, yo
     <hr>
-    <p>Designed and Coded by Alberto G. de la Cruz</p>
+    <p>Designed and Coded by Alberto Guillermo <span class="title-block">de la Cruz</span></p>
   </body>
 </html>
