--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -10,7 +10,17 @@
     }
     body {
       margin: 0;
-      padding: 10%;
+      padding: 2% 8% 3% 8%;
+    }
+
+    .title-block {
+      display: inline-block;
+    }
+
+    .nav {
+      display: inline-block;
+      margin: 0;
+      padding: 0 10px 0 0;
     }
     </style>
   </head>
@@ -19,6 +29,6 @@
 
 <p>And yes, I’m still sitting on about a hundred t-shirts.</p>
     <hr>
-    <p>Designed and Coded by Alberto G. de la Cruz</p>
+    <p>Designed and Coded by Alberto Guillermo <span class="title-block">de la Cruz</span></p>
   </body>
 </html>
