--- a/about/index.html
+++ b/about/index.html
@@ -9,8 +9,9 @@
       font-family: 'Quattrocento', Georgia, serif;
     }
     body {
-      margin: 0;
-      padding: 2% 8% 3% 8%;
+      margin: 0 auto;
+      max-width: 700px;
+      padding: 1% 8% 3% 8%;
     }
 
     .title-block {
