--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
       margin: 0;
       padding: 0 10px 0 0;
     }
+
+    .column {
+      display: inline-block;
+      max-width: 350px;
+      vertical-align: top;
+    }
     </style>
   </head>
   <body>
@@ -31,7 +37,7 @@
 
 <!-- <h3 class="nav"><a href="#">Projects</a></h3> -->
 <!-- <h3 class="nav"><a href="#">Writings</a></h3> -->
-<h3 class="nav"><a href="#">Résumé</a></h3>
+<h3 class="nav"><a href="/resume">Résumé</a></h3>
 
 <p>I am a designer and developer from Puerto Rico now studying and working in NYC. Since I am versed in both the creative and technical sides of developing an application, I want to be closely involved with the user experience and implementation of client side interfaces. I am also interested in data visualization and interactive art.</p>
 
@@ -51,16 +57,16 @@
 <h3><a href="/projects/koloni">Koloni</a> (UI/UX Design, Branding)</h3>
 <p>As a semester-long assignment I designed the screens, branding and marketing of a fictional microfinance app I named Koloni.</p>
 
-<h3><a href="#">Alice CRM System</a> (UI/UX Design)</h3>
+<h3><a href="/projects/alice-crm">Alice CRM System</a> (UI/UX Design)</h3>
 <p>I was an intern at a hospitality startup called Alice. Being the only designer on the team at the time, they trusted me with a lot of responsibilities and one of my earliest projects there was to design a CRM system to be used by hotel concierge.</p>
 
-<h3><a href="#">Arithmatic</a> (UI/UX Design)</h3>
+<h3><a href="/projects/arithmatic">Arithmatic</a> (UI/UX Design)</h3>
 <p>Designed for my App Design class, Arithmatic is a fast paced, mobile game in which players solve arithmetic problems as quickly as possible. I’m interested in developing this concept further.</p>
 
-<h3><a href="#">BlocChat</a> (Front End Development)</h3>
+<h3><a href="https://shining-torch-9429.firebaseapp.com/">BlocChat</a> (Front End Development)</h3>
 <p>My first project in Bloc without training wheels, I built a real time chat room with Angular running on the client side and Firebase as persistent data.</p>
 
-<h3><a href="#">Header/Body Font ‘Randomizer’</a> (Front End Development)</h3>
+<h3><a href="http://bl.ocks.org/AGdelaX/ea352a33ce861f748e7c">Header/Body Font ‘Randomizer’</a> (Front End Development)</h3>
 <p>A quick little project, I used Vanilla JS to write a script that lets users add Google Fonts to two sets of arrays of objects, one for header fonts and the other for body fonts. The script will ‘randomize’ the fonts displayed on the page.</p>
 
 <h3><a href="#">CRITlink</a> (Front End Development, UI/UX Design)</h3>
