--- a/projects/arithmatic/index.html
+++ b/projects/arithmatic/index.html
@@ -32,7 +32,9 @@
     </style>
   </head>
   <body>
-    <p>In one of my fall semester classes, I developed the identity for a fictional microfinance app called Koloni. I chose the name after discovering the word ‘colony’ is spelled and pronounced very similarly in over thirty different languages, with ‘koloni’ being the most common form of spelling. The app would function very similarly to Kickstarter, although users receiving money can then set up a payment plan to reimburse lenders.</p>
+    <p>One of the projects I made for my App Design class was a fast-paced mobile game based on arithmetic. The player swipes the equation into the correct answer, before the timer bar at the bottom of the screen runs out. The quicker the answer, the more points are rewarded. Each type of function is associated with its own color, potentially allowing quicker responses by players seeing the color and immediately grasping what type of function they must solve. Players can compete with one another in leaderboards to determine who’s on top.</p>
+
+<p>This is a concept I’d like to develop further.</p>
     <hr>
     <p>Designed and Coded by Alberto Guillermo <span class="title-block">de la Cruz</span></p>
   </body>
