--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -23,6 +23,12 @@
       margin: 0;
       padding: 0 10px 0 0;
     }
+
+    .column {
+      display: inline-block;
+      max-width: 350px;
+      vertical-align: top;
+    }
     </style>
   </head>
   <body>
