--- a/projects/koloni/index.html
+++ b/projects/koloni/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Alberto de la Cruz</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
     @import url(http://fonts.googleapis.com/css?family=Quattrocento:400,700);
     html {
