--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -25,6 +25,10 @@
       padding: 0 10px 0 0;
     }
 
+    img {
+      width: 100%;
+    }
+
     .column {
       display: inline-block;
       max-width: 350px;
@@ -33,7 +37,28 @@
     </style>
   </head>
   <body>
-    <p>Last year, out of curiosity I decided to check out the book Launch a Kickass T-Shirt Brand. I decided to give it a shot and that summer I set up a booth in Puerto Rico Comic Con selling t-shirts and stickers I designed. I also had a basic website and social media campaign promoting the products. My expectations with the brand weren’t in line with the reality. I wanted to be completely sold out of my product by the end of Comic Con, instead I was able to sell a quarter of my merchandise. I learned from the experience that I didn’t want to get into the t-shirt business, however it was because of this project I first started becoming interested in web design, collaborating with a programmer friend of mine in making the website. In designing the website I started reading up on responsive web design and usability and in the process became interested in user experience.</p>
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-logo.jpg">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arigatas.png">
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/borders.png">
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pelao.png">
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/gameboy.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pelear.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/hiragana.png">
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pique-sticker.jpg">
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/banana-bros.jpg">
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pistola-sticker.jpg">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-bizcard1.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-bizcard2.png">
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-postcard.png">
+
+<p>Last year, out of curiosity I decided to check out the book Launch a Kickass T-Shirt Brand. I decided to give it a shot and that summer I set up a booth in Puerto Rico Comic Con selling t-shirts and stickers I designed. I also had a basic website and social media campaign promoting the products. My expectations with the brand weren’t in line with the reality. I wanted to be completely sold out of my product by the end of Comic Con, instead I was able to sell a quarter of my merchandise. I learned from the experience that I didn’t want to get into the t-shirt business, however it was because of this project I first started becoming interested in web design, collaborating with a programmer friend of mine in making the website. In designing the website I started reading up on responsive web design and usability and in the process became interested in user experience.</p>
 
 <p>And yes, I’m still sitting on about a hundred t-shirts.</p>
     <hr>
