--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -25,6 +25,10 @@
       padding: 0 10px 0 0;
     }
 
+    img {
+      width: 100%;
+    }
+
     .column {
       display: inline-block;
       max-width: 350px;
@@ -33,7 +37,18 @@
     </style>
   </head>
   <body>
-    <p>My favorite project at Alice was the design of a CRM system to be used by hotel concierge. We wanted to develop a system where concierge can quickly make recommendations to hotel guests by searching through their notes and database on nearby vendors and being able to easily export the vendor data as a PDF.</p>
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-main.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-categories.png">
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-entry.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-email.png">
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-print.png">
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-pdf.png">
+
+
+<p>My favorite project at Alice was the design of a CRM system to be used by hotel concierge. We wanted to develop a system where concierge can quickly make recommendations to hotel guests by searching through their notes and database on nearby vendors and being able to easily export the vendor data as a PDF.</p>
 
 <p>After doing a competitive analysis of similar CRM systems (Yelp, TripAdvisor, OpenTable, etc.) we concluded that the most efficient way to display the data was a bisected screen, one side showing the list of available vendors and the other side showing the selected vendor profile. This way concierge can be able to look at a vendor in closer detail and still keep track of other options in the area without having to switch in and out of multiple web pages.</p>
 
