--- a/projects/koloni/index.html
+++ b/projects/koloni/index.html
@@ -25,6 +25,10 @@
       padding: 0 10px 0 0;
     }
 
+    img {
+      width: 100%;
+    }
+
     .column {
       display: inline-block;
       max-width: 350px;
@@ -33,7 +37,9 @@
     </style>
   </head>
   <body>
-    <p>In one of my fall semester classes, I developed the identity for a fictional microfinance app called Koloni. I chose the name after discovering the word ‘colony’ is spelled and pronounced very similarly in over thirty different languages, with ‘koloni’ being the most common form of spelling. The app would function very similarly to Kickstarter, although users receiving money can then set up a payment plan to reimburse lenders.</p>
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-logo.png">
+
+<p>In one of my fall semester classes, I developed the identity for a fictional microfinance app called Koloni. I chose the name after discovering the word ‘colony’ is spelled and pronounced very similarly in over thirty different languages, with ‘koloni’ being the most common form of spelling. The app would function very similarly to Kickstarter, although users receiving money can then set up a payment plan to reimburse lenders.</p>
     <hr>
     <p>Designed and Coded by Alberto Guillermo <span class="title-block">de la Cruz</span></p>
   </body>
