--- a/resume/index.html
+++ b/resume/index.html
@@ -25,6 +25,10 @@
       padding: 0 10px 0 0;
     }
 
+    img {
+      width: 100%;
+    }
+
     .column {
       display: inline-block;
       max-width: 350px;
