--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -45,7 +45,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-entry.
 <img src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-print.png">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-pdf.png">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-pdf.png" style="border: 1px solid #d3d3d3">
 
 
 <p>My favorite project at Alice was the design of a CRM system to be used by hotel concierge. We wanted to develop a system where concierge can quickly make recommendations to hotel guests by searching through their notes and database on nearby vendors and being able to easily export the vendor data as a PDF.</p>
