--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -37,8 +37,8 @@
     </style>
   </head>
   <body>
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-main.png">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-categories.png">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-main.png" style="border: 1px solid #d3d3d3">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-categories.png" style="border: 1px solid #d3d3d3">
 <img src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-entry.png">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-email.png">
