--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -63,5 +63,16 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-postcard
 <p>And yes, I’m still sitting on about a hundred t-shirts.</p>
     <hr>
     <p>Designed and Coded by Alberto Guillermo <span class="title-block">de la Cruz</span></p>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-65309658-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
