--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -27,6 +27,7 @@
 
     img {
       width: 100%;
+      padding: 3px 0 3px 0;
     }
 
     .column {
@@ -69,7 +70,6 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-pdf.pn
 
       ga('create', 'UA-65309658-1', 'auto');
       ga('send', 'pageview');
-
     </script>
   </body>
 </html>
