--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     img {
       width: 100%;
+      padding: 3px 0 3px 0;
     }
 
     .column {
@@ -98,7 +99,6 @@
 
       ga('create', 'UA-65309658-1', 'auto');
       ga('send', 'pageview');
-
     </script>
   </body>
 </html>
