--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -27,6 +27,7 @@
 
     img {
       width: 100%;
+      padding: 3px 0 3px 0;
     }
 
     .column {
@@ -72,7 +73,6 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-postcard
 
       ga('create', 'UA-65309658-1', 'auto');
       ga('send', 'pageview');
-
     </script>
   </body>
 </html>
