--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -26,8 +26,13 @@
     }
 
     img {
-      width: 100%;
-      padding: 3px 0 3px 0;
+      max-width: 100%;
+      margin: 10px 0 10px 0;
+      display: inline-block;
+    }
+
+    .image-container {
+      text-align: center;
     }
 
     .column {
@@ -38,7 +43,10 @@
     </style>
   </head>
   <body>
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-main.png" style="border: 1px solid #d3d3d3">
+    <h1><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></h1>
+<h2>Alice CRM System (UI/UX Design)</h2>
+<div class="image-container">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-main.png" style="border: 1px solid #d3d3d3">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-categories.png" style="border: 1px solid #d3d3d3">
 <img src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-entry.png">
@@ -47,6 +55,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-entry.
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-print.png">
 <img src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-pdf.png" style="border: 1px solid #d3d3d3">
+</div>
 
 
 <p>My favorite project at Alice was the design of a CRM system to be used by hotel concierge. We wanted to develop a system where concierge can quickly make recommendations to hotel guests by searching through their notes and database on nearby vendors and being able to easily export the vendor data as a PDF.</p>
