--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -26,8 +26,13 @@
     }
 
     img {
-      width: 100%;
-      padding: 3px 0 3px 0;
+      max-width: 100%;
+      margin: 10px 0 10px 0;
+      display: inline-block;
+    }
+
+    .image-container {
+      text-align: center;
     }
 
     .column {
@@ -38,7 +43,10 @@
     </style>
   </head>
   <body>
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-logo.jpg">
+    <h1><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></h1>
+<h2>Arroz Blanco (T-Shirt and Sticker Design, Branding)</h2>
+<div class="img-container">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-logo.jpg">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arigatas.png">
 <img src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/borders.png">
@@ -58,6 +66,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pistola-sticke
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-bizcard2.png">
 <img src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-postcard.png">
+</div>
 
 <p>Last year, out of curiosity I decided to check out the book Launch a Kickass T-Shirt Brand. I decided to give it a shot and that summer I set up a booth in Puerto Rico Comic Con selling t-shirts and stickers I designed. I also had a basic website and social media campaign promoting the products. My expectations with the brand weren’t in line with the reality. I wanted to be completely sold out of my product by the end of Comic Con, instead I was able to sell a quarter of my merchandise. I learned from the experience that I didn’t want to get into the t-shirt business, however it was because of this project I first started becoming interested in web design, collaborating with a programmer friend of mine in making the website. In designing the website I started reading up on responsive web design and usability and in the process became interested in user experience.</p>
 
