--- a/resume/index.html
+++ b/resume/index.html
@@ -26,8 +26,13 @@
     }
 
     img {
-      width: 100%;
-      padding: 3px 0 3px 0;
+      max-width: 100%;
+      margin: 10px 0 10px 0;
+      display: inline-block;
+    }
+
+    .image-container {
+      text-align: center;
     }
 
     .column {
