--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <p>A quick little project, I used Vanilla JS to write a script that lets users add Google Fonts to two sets of arrays of objects, one for header fonts and the other for body fonts. The script will ‘randomize’ the fonts displayed on the page.</p>
 
 <h3><a href="#">CRITlink</a> (Front End Development, UI/UX Design)</h3>
-<p>A light version of InVision’s critiquing system, my goal was to allow users to upload images and be able to send that link to friends to get position based comments on the image. I also played around with jQuery UI to make all the elements on the page draggable.</p>
+<p>A light version of InVision’s critiquing system, my goal was to allow users to upload images and be able to send that link to friends to get position based comments on the image. I also played around with jQuery UI to make all the elements on the page draggable. This app was built with ReactJS with Firebase in the back-end.</p>
 
 <!-- <hr>
 
