--- a/resume/index.html
+++ b/resume/index.html
@@ -122,8 +122,10 @@
     <li>jQuery</li>
     <li>AngularJS</li>
     <li>ReactJS</li>
+    <li>D3</li>
     <li>Git Version Control</li>
     <li>Grunt</li>
+    <li>Googling StackOverflow</li>
   </ul>
 
 <h2>Education</h2>
