--- a/index.html
+++ b/index.html
@@ -62,26 +62,26 @@
 
 <h2>Projects</h2>
 
-<h3><a href="/projects/arroz-blanco">Arroz Blanco</a> (T-Shirt and Sticker Design, Branding)</h3>
-<p>As a summer project, I sought to launch a t-shirt and sticker business and sell the merchandise in Puerto Rico Comic Con. Although the business wasn’t a success, this project is what got me interested in UI/UX Design.</p>
-
-<h3><a href="/projects/koloni">Koloni</a> (UI/UX Design, Branding)</h3>
-<p>As a semester-long assignment I designed the screens, branding and marketing of a fictional microfinance app I named Koloni.</p>
-
-<h3><a href="/projects/alice-crm">Alice CRM System</a> (UI/UX Design)</h3>
-<p>I was an intern at a hospitality startup called Alice. Being the only designer on the team at the time, they trusted me with a lot of responsibilities and one of my earliest projects there was to design a CRM system to be used by hotel concierge.</p>
-
-<h3><a href="/projects/arithmatic">Arithmatic</a> (UI/UX Design)</h3>
-<p>Designed for my App Design class, Arithmatic is a fast paced, mobile game in which players solve arithmetic problems as quickly as possible. I’m interested in developing this concept further.</p>
+<h3><a href="http://bl.ocks.org/AGdelaX/ea352a33ce861f748e7c">Header/Body Font ‘Randomizer’</a> (Front End Development)</h3>
+<p>A quick little project, I used Vanilla JS to write a script that lets users add Google Fonts to two sets of arrays of objects, one for header fonts and the other for body fonts. The script will ‘randomize’ the fonts displayed on the page.</p>
 
 <h3><a href="https://shining-torch-9429.firebaseapp.com/">BlocChat</a> (Front End Development)</h3>
 <p>My first project in Bloc without training wheels, I built a real time chat room with Angular running on the client side and Firebase as persistent data.</p>
 
-<h3><a href="http://bl.ocks.org/AGdelaX/ea352a33ce861f748e7c">Header/Body Font ‘Randomizer’</a> (Front End Development)</h3>
-<p>A quick little project, I used Vanilla JS to write a script that lets users add Google Fonts to two sets of arrays of objects, one for header fonts and the other for body fonts. The script will ‘randomize’ the fonts displayed on the page.</p>
+<h3><a href="/projects/arithmatic">Arithmatic</a> (UI/UX Design)</h3>
+<p>Designed for my App Design class, Arithmatic is a fast paced, mobile game in which players solve arithmetic problems as quickly as possible. I’m interested in developing this concept further.</p>
 
-<h3><a href="#">CRITlink</a> (Front End Development, UI/UX Design)</h3>
-<p>A light version of InVision’s critiquing system, my goal was to allow users to upload images and be able to send that link to friends to get position based comments on the image. I also played around with jQuery UI to make all the elements on the page draggable. This app was built with ReactJS with Firebase in the back-end.</p>
+<h3><a href="/projects/alice-crm">Alice CRM System</a> (UI/UX Design)</h3>
+<p>I was an intern at a hospitality startup called Alice. Being the only designer on the team at the time, they trusted me with a lot of responsibilities and one of my earliest projects there was to design a CRM system to be used by hotel concierge.</p>
+
+<h3><a href="/projects/koloni">Koloni</a> (UI/UX Design, Branding)</h3>
+<p>As a semester-long assignment I designed the screens, branding and marketing of a fictional microfinance app I named Koloni.</p>
+
+<h3><a href="/projects/arroz-blanco">Arroz Blanco</a> (T-Shirt and Sticker Design, Branding)</h3>
+<p>As a summer project, I sought to launch a t-shirt and sticker business and sell the merchandise in Puerto Rico Comic Con. Although the business wasn’t a success, this project is what got me interested in UI/UX Design.</p>
+
+<!-- <h3><a href="#">CRITlink</a> (Front End Development, UI/UX Design)</h3>
+<p>A light version of InVision’s critiquing system, my goal was to allow users to upload images and be able to send that link to friends to get position based comments on the image. I also played around with jQuery UI to make all the elements on the page draggable. This app was built with ReactJS with Firebase in the back-end.</p> -->
 
 <!-- <hr>
 
