--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <p>I am currently working on my BFA in Design from the <a href="http://sva.edu">School of Visual Arts</a> and have recently completed a Front End Development Apprenticeship with <a href="http://bloc.io">Bloc</a>.</p>
 
-<p>Outside of work I am a comics, animation and film buff. I used to study Illustration, but I also strongly considered going to school for Art History. I enjoy drinking craft beer and sake with friends and trying new types of cuisine. I love single player video games, although I haven’t been able to sit down and play in quite a long time. You can probably find me spinning in <a href="http://flywheelsports.com">Flywheel</a> in their Flatiron location.</p>
+<p>Outside of work I am a comics, animation and film buff. I used to study Illustration, but I also strongly considered going to school for Art History. I enjoy drinking craft beer and sake with friends and trying new types of cuisine. I love single player video games, although I haven’t been able to sit down and play in quite a long time. You can probably find me spinning in <a href="http://flywheelsports.com">Flywheel</a> at their Flatiron location.</p>
 
 <p>I can also be found on <a href="https://twitter.com/AGdelaX">Twitter</a>, <a href="https://github.com/AGdelaX">GitHub</a>, <a href="http://sblood.tumblr.com/">Tumblr</a> and <a href="https://www.linkedin.com/pub/alberto-de-la-cruz/77/64/280">LinkedIn</a>.</p>
 
