--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
 <p>Using D3 in conjunction with Leaflet and Mapbox, I created an interactive map of NYC with coordinates on each vehicle related injury, categorized by type of injured victim and the months of 2014. I obtained this data from <a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Motor-Vehicle-Collisions/h9gi-nx95">NYC's official datasets</a>.</p>
 <p>It's a very large datafile, so loading the content and any subsequent filtering will take a while.</p>
 
-<h3><a href="https://shining-torch-9429.firebaseapp.com/">BlocChat</a> (Front End Development)</h3>
-<p>My first project in Bloc without training wheels, I built a real time chat room with Angular running on the client side and Firebase as persistent data.</p>
+<h3><a href="https://shining-torch-9429.firebaseapp.com/">Hey Buddy!</a> (Front End Development, UI/UX Design)</h3>
+<p>I built a real time chat room with Angular running on the client side and Firebase as persistent data. As a joke, I decided to make the UI as obnoxious as possible, using Comic Sans for the font and incorporating a loud rainbow gradient.</p>
+<p>I fear that this time I have gone too far...</p>
 
 <h3><a href="http://bl.ocks.org/AGdelaX/ea352a33ce861f748e7c">Header/Body Font ‘Randomizer’</a> (Front End Development)</h3>
 <p>A quick little project, I used Vanilla JS to write a script that lets users add Google Fonts to two sets of arrays of objects, one for header fonts and the other for body fonts. The script will ‘randomize’ the fonts displayed on the page.</p>
