--- a/index.html
+++ b/index.html
@@ -44,49 +44,44 @@
   </head>
   <body>
     <h1>Alberto Guillermo <span class="title-block">de la Cruz</span></h1>
-<h2>UI/UX Designer and <span class="title-block">Front End Developer</span></h2>
+<h2>UI/UX Designer &amp; <span class="title-block">Front End Developer</span></h2>
 
+<!-- <h3 class="nav"><a href="#">Projects</a></h3> -->
+<!-- <h3 class="nav"><a href="#">Writings</a></h3> -->
 <h3 class="nav"><a href="/resume">Résumé</a></h3>
 
 <p>I am a designer and developer from Puerto Rico now studying and working in NYC. Since I am versed in both the creative and technical sides of developing an application, I want to be closely involved with the user experience and implementation of client side interfaces. I am also interested in data visualization and interactive art.</p>
 
 <p>I am currently working on my BFA in Design from the <a href="http://sva.edu">School of Visual Arts</a> and have recently completed a Front End Development Apprenticeship with <a href="http://bloc.io">Bloc</a>.</p>
 
-<p>Outside of work I am a comics, animation and film buff. I used to study Illustration, but I also strongly considered going to school for Art History. I enjoy drinking craft beer and sake with friends and trying new types of cuisine. I love single player video games, although I haven’t been able to sit down and play in quite a long time. You can probably find me spinning in <a href="http://flywheelsports.com">Flywheel</a> at their Flatiron location.</p>
+<p>Outside of work I am an animation, comics and film buff. I used to study Illustration, but I also strongly considered going to school for Art History. I enjoy drinking craft beer and sake with friends and trying new types of cuisine. I love single player video games, although I haven’t been able to sit down and play in quite a long time. You can probably find me spinning in <a href="http://flywheelsports.com">Flywheel's</a> Flatiron location.</p>
 
-<p>I can also be found on <a href="https://twitter.com/AGdelaX">Twitter</a>, <a href="https://github.com/AGdelaX">GitHub</a>, <a href="http://sblood.tumblr.com/">Tumblr</a> and <a href="https://www.linkedin.com/pub/alberto-de-la-cruz/77/64/280">LinkedIn</a>.</p>
+<p>I can also be found on <a href="https://twitter.com/_albertogui">Twitter</a>, <a href="https://github.com/AGdelaX">GitHub</a>, <a href="http://sblood.tumblr.com/">Tumblr</a> and <a href="https://www.linkedin.com/pub/alberto-de-la-cruz/77/64/280">LinkedIn</a>.</p>
 
 <hr>
 
 <h2>Projects</h2>
 
-<p><a href="http://bl.ocks.org/AGdelaX">Check out my gists!</a></p>
-
-<h3><a href="http://bl.ocks.org/AGdelaX/raw/5f3982201cfff21e631d/">NYC Vehicle Collisions 2014</a> (Front-End Development, Data Visualization, UI/UX Design)</h3>
-<p>Using D3 in conjunction with Leaflet and Mapbox, I created an interactive map of NYC with coordinates on each vehicle related injury, categorized by type of injured victim and the months of 2014. I obtained this data from <a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Motor-Vehicle-Collisions/h9gi-nx95">NYC's official datasets</a>.</p>
-<p>It's a very large datafile, so loading the content and any subsequent filtering will take a while.</p>
-
-<h3><a href="https://shining-torch-9429.firebaseapp.com/">Hey Buddy!</a> (Front End Development, UI/UX Design)</h3>
-<p>I built a real time chat room with Angular running on the client side and Firebase as persistent data. As a joke, I decided to make the UI as obnoxious as possible, using Comic Sans for the font and incorporating a loud rainbow gradient.</p>
-<p>I fear that this time I have gone too far...</p>
-
-<h3><a href="http://bl.ocks.org/AGdelaX/ea352a33ce861f748e7c">Header/Body Font ‘Randomizer’</a> (Front End Development)</h3>
-<p>A quick little project, I used Vanilla JS to write a script that lets users add Google Fonts to two sets of arrays of objects, one for header fonts and the other for body fonts. The script will ‘randomize’ the fonts displayed on the page.</p>
-
-<h3><a href="/projects/arithmatic">Arithmatic</a> (UI/UX Design)</h3>
-<p>Designed for my App Design class, Arithmatic is a fast paced, mobile game in which players solve arithmetic problems as quickly as possible. I’m interested in developing this concept further.</p>
-
-<h3><a href="/projects/alice-crm">Alice CRM System</a> (UI/UX Design)</h3>
-<p>I was an intern at a hospitality startup called Alice. Being the only designer on the team at the time, they trusted me with a lot of responsibilities and one of my earliest projects there was to design a CRM system to be used by hotel concierge.</p>
+<h3><a href="/projects/arroz-blanco">Arroz Blanco</a> (T-Shirt and Sticker Design, Branding)</h3>
+<p>As a summer project, I sought to launch a t-shirt and sticker business and sell the merchandise in Puerto Rico Comic Con. Although the business wasn’t a success, this project is what got me interested in UI/UX Design.</p>
 
 <h3><a href="/projects/koloni">Koloni</a> (UI/UX Design, Branding)</h3>
 <p>As a semester-long assignment I designed the screens, branding and marketing of a fictional microfinance app I named Koloni.</p>
 
-<h3><a href="/projects/arroz-blanco">Arroz Blanco</a> (T-Shirt and Sticker Design, Branding)</h3>
-<p>As a summer project, I sought to launch a t-shirt and sticker business and sell the merchandise in Puerto Rico Comic Con. Although the business wasn’t a success, this project is what got me interested in UI/UX Design.</p>
+<h3><a href="/projects/alice-crm">Alice CRM System</a> (UI/UX Design)</h3>
+<p>I was an intern at a hospitality startup called Alice. Being the only designer on the team at the time, they trusted me with a lot of responsibilities and one of my earliest projects there was to design a CRM system to be used by hotel concierge.</p>
 
-<!-- <h3><a href="#">CRITlink</a> (Front End Development, UI/UX Design)</h3>
-<p>A light version of InVision’s critiquing system, my goal was to allow users to upload images and be able to send that link to friends to get position based comments on the image. I also played around with jQuery UI to make all the elements on the page draggable. This app was built with ReactJS with Firebase in the back-end.</p> -->
+<h3><a href="/projects/arithmatic">Arithmatic</a> (UI/UX Design)</h3>
+<p>Designed for my App Design class, Arithmatic is a fast paced, mobile game in which players solve arithmetic problems as quickly as possible. I’m interested in developing this concept further.</p>
+
+<h3><a href="https://shining-torch-9429.firebaseapp.com/">BlocChat</a> (Front End Development)</h3>
+<p>My first project in Bloc without training wheels, I built a real time chat room with Angular running on the client side and Firebase as persistent data.</p>
+
+<h3><a href="http://bl.ocks.org/AGdelaX/ea352a33ce861f748e7c">Header/Body Font ‘Randomizer’</a> (Front End Development)</h3>
+<p>A quick little project, I used Vanilla JS to write a script that lets users add Google Fonts to two sets of arrays of objects, one for header fonts and the other for body fonts. The script will ‘randomize’ the fonts displayed on the page.</p>
+
+<h3><a href="#">CRITlink</a> (Front End Development, UI/UX Design)</h3>
+<p>A light version of InVision’s critiquing system, my goal was to allow users to upload images and be able to send that link to friends to get position based comments on the image. I also played around with jQuery UI to make all the elements on the page draggable. This app was built with ReactJS with Firebase in the back-end.</p>
 
 <!-- <hr>
 
