--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </head>
   <body>
     <h1>Alberto Guillermo <span class="title-block">de la Cruz</span></h1>
-<h2>UI/UX Designer &amp; <span class="title-block">Front End Developer</span></h2>
+<h2>Designer &amp; <span class="title-block">Developer</span></h2>
 
 <!-- <h3 class="nav"><a href="#">Projects</a></h3> -->
 <!-- <h3 class="nav"><a href="#">Writings</a></h3> -->
