--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
     @import url(http://fonts.googleapis.com/css?family=Quattrocento:400,700);
     html {
-      font-family: 'Quattrocento', Georgia, serif;
+      font-family: 'Helvetica Neue', Georgia, serif;
     }
     body {
       margin: 0 auto;
