--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </head>
   <body>
     <h1>Alberto Guillermo <span class="title-block">de la Cruz</span></h1>
-<h2>Designer &amp; <span class="title-block">Developer</span></h2>
+<h2>Designer &amp; <span class="title-block">sublDeveloper</span></h2>
 
 <!-- <h3 class="nav"><a href="#">Projects</a></h3> -->
 <!-- <h3 class="nav"><a href="#">Writings</a></h3> -->
@@ -68,8 +68,8 @@
 <h3><a href="/projects/koloni">Koloni</a> (UI/UX Design, Branding)</h3>
 <p>As a semester-long assignment I designed the screens, branding and marketing of a fictional microfinance app I named Koloni.</p>
 
-<h3><a href="/projects/alice-crm">Alice CRM System</a> (UI/UX Design)</h3>
-<p>I was an intern at a hospitality startup called Alice. Being the only designer on the team at the time, they trusted me with a lot of responsibilities and one of my earliest projects there was to design a CRM system to be used by hotel concierge.</p>
+<!-- <h3><a href="/projects/alice-crm">Alice CRM System</a> (UI/UX Design)</h3>
+<p>I was an intern at a hospitality startup called Alice. Being the only designer on the team at the time, they trusted me with a lot of responsibilities and one of my earliest projects there was to design a CRM system to be used by hotel concierge.</p> -->
 
 <h3><a href="/projects/arithmatic">Arithmatic</a> (UI/UX Design)</h3>
 <p>Designed for my App Design class, Arithmatic is a fast paced, mobile game in which players solve arithmetic problems as quickly as possible. I’m interested in developing this concept further.</p>
@@ -80,8 +80,8 @@
 <h3><a href="http://bl.ocks.org/AGdelaX/ea352a33ce861f748e7c">Header/Body Font ‘Randomizer’</a> (Front End Development)</h3>
 <p>A quick little project, I used Vanilla JS to write a script that lets users add Google Fonts to two sets of arrays of objects, one for header fonts and the other for body fonts. The script will ‘randomize’ the fonts displayed on the page.</p>
 
-<h3><a href="#">CRITlink</a> (Front End Development, UI/UX Design)</h3>
-<p>A light version of InVision’s critiquing system, my goal was to allow users to upload images and be able to send that link to friends to get position based comments on the image. I also played around with jQuery UI to make all the elements on the page draggable. This app was built with ReactJS with Firebase in the back-end.</p>
+<!-- <h3><a href="#">CRITlink</a> (Front End Development, UI/UX Design)</h3>
+<p>A light version of InVision’s critiquing system, my goal was to allow users to upload images and be able to send that link to friends to get position based comments on the image. I also played around with jQuery UI to make all the elements on the page draggable. This app was built with ReactJS with Firebase in the back-end.</p> -->
 
 <!-- <hr>
 
