--- a/projects/koloni/index.html
+++ b/projects/koloni/index.html
@@ -5,9 +5,9 @@
     <title>Alberto de la Cruz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-    @import url(http://fonts.googleapis.com/css?family=Quattrocento:400,700);
+    /*@import url(http://fonts.googleapis.com/css?family=Quattrocento:400,700);*/
     html {
-      font-family: 'Helvetica Neue', Georgia, serif;
+      font-family: 'Helvetica Neue', Helvetica, sans-serif;
     }
     body {
       margin: 0 auto;
