--- a/resume/index.html
+++ b/resume/index.html
@@ -14,7 +14,9 @@
       max-width: 700px;
       padding: 1% 8% 3% 8%;
     }
-
+    a{
+      text-decoration: none;
+    }
     .title-block {
       display: inline-block;
     }
