--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <p>Outside of work I am an animation, comics and film buff. I used to study Illustration, but I also strongly considered going to school for Art History. I enjoy drinking craft beer and sake with friends and trying new types of cuisine. I love single player video games, although I haven’t been able to sit down and play in quite a long time. You can probably find me spinning in <a href="http://flywheelsports.com">Flywheel's</a> Flatiron location.</p>
 
-<p>I can also be found on <a href="https://twitter.com/_albertogui">Twitter</a>, <a href="https://github.com/AGdelaX">GitHub</a>, <a href="http://sblood.tumblr.com/">Tumblr</a> and <a href="https://www.linkedin.com/pub/alberto-de-la-cruz/77/64/280">LinkedIn</a>.</p>
+<p>I can also be found on <a href="https://twitter.com/agdelax">Twitter</a>, <a href="https://github.com/AGdelaX">GitHub</a>, <a href="http://sblood.tumblr.com/">Tumblr</a> and <a href="https://www.linkedin.com/pub/alberto-de-la-cruz/77/64/280">LinkedIn</a>.</p>
 
 <hr>
 
