--- a/projects/arithmatic/index.html
+++ b/projects/arithmatic/index.html
@@ -18,6 +18,8 @@
       color: #dfdfdf;
     }
     a{
+      color: red;
+      transition: color 7s;
       text-decoration: none;
     }
     .title-block {
