--- a/resume/index.html
+++ b/resume/index.html
@@ -18,6 +18,8 @@
       color: #dfdfdf;
     }
     a{
+      color: red;
+      transition: color 7s;
       text-decoration: none;
     }
     .title-block {
