--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </head>
   <body>
     <h2>Alberto Guillermo <span class="title-block">de la Cruz</span></h2>
-<h2>Product Design Intern at &amp; <a href="artbinder.com">ArtBinder</a></h2>
+<h2>Product Design Intern at <a href="artbinder.com">ArtBinder</a></h2>
 
 <!-- <h3 class="nav"><a href="#">Projects</a></h3> -->
 <!-- <h3 class="nav"><a href="#">Writings</a></h3> -->
