--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
       margin: 0 auto;
       max-width: 700px;
       padding: 1% 8% 3% 8%;
+      line-height: 1.5;
     }
     a{
       text-decoration: none;
       color: black;
       border-bottom: 2px solid #7D26CD;
+      padding-bottom: 0px;
     }
     .title-block {
       display: inline-block;
@@ -65,7 +67,7 @@
 
 <p>Outside of work I am an animation, comics and film buff. I used to study Illustration, but I also strongly considered going to school for Art History. I enjoy drinking craft beer and sake with friends and trying new types of cuisine. I love single player video games, although I haven’t been able to sit down and play in quite a long time. You can probably find me spinning in <a href="http://flywheelsports.com">Flywheel's</a> Flatiron location.</p>
 
-<hr>
+<!-- <hr> -->
 
 <h2>Projects</h2>
 
