--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -14,11 +14,13 @@
       margin: 0 auto;
       max-width: 700px;
       padding: 1% 8% 3% 8%;
+      line-height: 1.5;
     }
     a{
       text-decoration: none;
       color: black;
       border-bottom: 2px solid #7D26CD;
+      padding-bottom: 0px;
     }
     .title-block {
       display: inline-block;
