--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       display: inline-block;
     }
 
+    #topnav{
+      text-align: center;
+    }
+
     .nav {
       display: inline-block;
       margin: 0;
@@ -50,16 +54,16 @@
     </style>
   </head>
   <body>
-    <h2>Alberto Guillermo <span class="title-block">de la Cruz</span></h2>
-<h2>Product Design Intern at <a href="https://artbinder.com">ArtBinder</a></h2>
+    <div id="topnav">
+	<h2>Alberto Guillermo <span class="title-block">de la Cruz</span></h2>
+	<h2>Product Design Intern at <a href="https://artbinder.com">ArtBinder</a></h2>
 
-<!-- <h3 class="nav"><a href="#">Projects</a></h3> -->
-<!-- <h3 class="nav"><a href="#">Writings</a></h3> -->
-<h3 class="nav"><a href="/resume">Résumé</a></h3>
-<h3 class="nav"><a href="https://twitter.com/agdelax">Twitter</a></h3>
-<h3 class="nav"><a href="https://github.com/AGdelaX">Github</a></h3>
-<h3 class="nav"><a href="http://sblood.tumblr.com/">Tumblr</a></h3>
-<h3 class="nav"><a href="https://www.linkedin.com/in/agdelax">LinkedIn</a></h3>
+	<h3 class="nav"><a href="/resume">Résumé</a></h3>
+	<h3 class="nav"><a href="https://twitter.com/agdelax">Twitter</a></h3>
+	<h3 class="nav"><a href="https://github.com/AGdelaX">Github</a></h3>
+	<h3 class="nav"><a href="http://sblood.tumblr.com/">Tumblr</a></h3>
+	<h3 class="nav"><a href="https://www.linkedin.com/in/agdelax">LinkedIn</a></h3>
+</div>
 
 <p>I am a designer and developer from Puerto Rico now studying and working in NYC. Since I am versed in both the creative and technical sides of developing an application, I want to be closely involved with the user experience and implementation of client side interfaces. I am also interested in data visualization and interactive art.</p>
 
