--- a/projects/arithmatic/index.html
+++ b/projects/arithmatic/index.html
@@ -26,6 +26,10 @@
       display: inline-block;
     }
 
+    #topnav{
+      text-align: center;
+    }
+
     .nav {
       display: inline-block;
       margin: 0;
