--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <h3><a href="/projects/arithmatic">Arithmatic</a> (UI/UX Design)</h3>
 <p>Designed for my App Design class, Arithmatic is a fast paced, mobile game in which players solve arithmetic problems as quickly as possible. I’m interested in developing this concept further.</p>
 
-<h3><a href="https://shining-torch-9429.firebaseapp.com/">BlocChat</a> (Front End Development)</h3>
+<h3><a href="https://shining-torch-9429.firebaseapp.com/">Hey Buddy!</a> (Front End Development)</h3>
 <p>My first project in Bloc without training wheels, I built a real time chat room with Angular running on the client side and Firebase as persistent data.</p>
 
 <h3><a href="http://bl.ocks.org/AGdelaX/ea352a33ce861f748e7c">Header/Body Font ‘Randomizer’</a> (Front End Development)</h3>
