--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 
 <p><a href="http://bl.ocks.org/AGdelaX">Check out my gists!</a></p>
 
-<h3><a href="http://bl.ocks.org/AGdelaX/5f3982201cfff21e631d">NYC Vehicle Collisions 2014</a> (Front End Development)</h3>
-<p>An interactive map of NYC showing plotting vehicles collisions by victim type, time and location. It's a very large data file so it may take a minute or two to load.</p>
+<h3><a href="http://bl.ocks.org/AGdelaX/5f3982201cfff21e631d">NYC Vehicle Collisions 2014</a> (Front End Development, UI Design)</h3>
+<p>An interactive map of NYC showing plotting vehicles collisions by victim type, time and location. It's a very large data file so it may take a minute or two to load. Built with D3 and Leaflet.</p>
 
 <h3><a href="https://shining-torch-9429.firebaseapp.com/">Hey Buddy!</a> (Front End Development, UI Design)</h3>
-<p>My first project in Bloc without training wheels, I built a real time chat room with Angular running on the client side and Firebase as persistent data.</p>
+<p>An early experiment with Angular, I built a real time chat room with Firebase for persistent data. As a joke, I made the UI as obnoxious as possible.</p>
 
 <h3><a href="/projects/arithmatic">Arithmatic</a> (UI/UX Design)</h3>
 <p>Designed for my App Design class, Arithmatic is a fast paced, mobile game in which players solve arithmetic problems as quickly as possible where users can compete with one another.</p>
