--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 	<h3 class="nav"><a href="http://sblood.tumblr.com/">Tumblr</a></h3>
 	<h3 class="nav"><a href="https://www.linkedin.com/in/agdelax">LinkedIn</a></h3>
 </div>
+<!-- 
+<p>I am a designer and developer from Puerto Rico now studying and working in NYC. Since I am versed in both the creative and technical sides of developing an application, I want to be closely involved with the user experience and implementation of client side interfaces. I am also interested in data visualization and interactive art.</p> -->
 
-<p>I am a designer and developer from Puerto Rico now studying and working in NYC. Since I am versed in both the creative and technical sides of developing an application, I want to be closely involved with the user experience and implementation of client side interfaces. I am also interested in data visualization and interactive art.</p>
-
-<p>I am currently working on my BFA in Design from the <a href="http://sva.edu">School of Visual Arts</a> and have recently completed a Front End Development Apprenticeship with <a href="http://bloc.io">Bloc</a>.</p>
-
-<p>Outside of work I am an animation, comics and film buff. I used to study Illustration, but I also strongly considered going to school for Art History. I enjoy drinking craft beer and sake with friends and trying new types of cuisine. I love single player video games, although I haven’t been able to sit down and play in quite a long time. You can probably find me spinning in <a href="http://flywheelsports.com">Flywheel's</a> Flatiron location.</p>
+<p>Hello! I am a designer and developer from Puerto Rico now studying and working in NYC. My background lies in User Experience and Visual Design, and I also enjoy coding on the front-end. Right now I'm interning at a local startup called <a href='https://artbinder.com'>ArtBinder</a>, building software for museums and art galleries. Before that, I worked at another startup called <a href='https://aliceapp.com'>Alice</a>, designing apps for hotel guests and backend software for hotel employees. Besides that, I love comics, animation and good beer. Cheers!</p>
+<!-- 
+<p>Outside of work I am an animation, comics and films buff. I used to study Illustration, but I also strongly considered going to school for Art History. I enjoy drinking craft beer and sake with friends and trying new types of cuisine. You can probably find me spinning in <a href="http://flywheelsports.com">Flywheel's</a> Flatiron location.</p> -->
 
 <!-- <hr> -->
 
