--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
       vertical-align: top;
     }
 
+    #footer{
+      text-align: center;
+    }
+
     @media screen and (max-width: 421px) {
       #topnav{
         line-height: 2em;
@@ -119,8 +123,9 @@
 <h3><a href="#">Rekindling My Love of Learning</a> (August 1, 2015)</h3>
 <p>In high school I was far from the best student. I was often gripped by fears of failing and would do the bare minimum in order to pass. Going to art school taught me to enjoy learning.</p> -->
 
-    <hr>
-    <p>Designed and Coded by Alberto Guillermo <span class="title-block">de la Cruz</span></p>
+    <div id="footer">
+      <p>&copy; Alberto Guillermo de la Cruz</span></p>
+    </div>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
