--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -60,6 +60,10 @@
       vertical-align: top;
     }
 
+    #footer{
+      text-align: center;
+    }
+
     @media screen and (max-width: 421px) {
       #topnav{
         line-height: 2em;
@@ -95,8 +99,9 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-pdf.pn
 
 <p>I was the design lead on this feature, although I received plenty of guidance and help from not only the other employees at Alice but also from other concierge workers in designing a feature they would be delighted in using.</p>
 
-    <hr>
-    <p>Designed and Coded by Alberto Guillermo <span class="title-block">de la Cruz</span></p>
+    <div id="footer">
+      <p>&copy; Alberto Guillermo de la Cruz</span></p>
+    </div>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
