--- a/resume/index.html
+++ b/resume/index.html
@@ -60,6 +60,10 @@
       vertical-align: top;
     }
 
+    #footer{
+      text-align: center;
+    }
+
     @media screen and (max-width: 421px) {
       #topnav{
         line-height: 2em;
@@ -178,8 +182,9 @@
 <p>High School Diploma</p>
 </div>
 
-    <hr>
-    <p>Designed and Coded by Alberto Guillermo <span class="title-block">de la Cruz</span></p>
+    <div id="footer">
+      <p>&copy; Alberto Guillermo de la Cruz</span></p>
+    </div>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
