--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <body>
     <div id="topnav">
 	<h2>Alberto Guillermo <span class="title-block">de la Cruz</span></h2>
-	<h2>Product Design Intern at <a href="https://artbinder.com">ArtBinder</a></h2>
+	<h2>Product Design Intern at <a href="https://www.artbinder.com/default.aspx">ArtBinder</a></h2>
 
 	<h3 class="nav"><a href="/resume">Résumé</a></h3>
 	<h3 class="nav"><a href="https://twitter.com/agdelax">Twitter</a></h3>
