--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -110,7 +110,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-pdf.pn
 <p>I was the design lead on this feature, although I received plenty of guidance and help from not only the other employees at Alice but also from other concierge workers in designing a feature they would be delighted in using.</p>
 
     <div id="footer">
-      <p>&copy; Alberto Guillermo de la Cruz</span></p>
+      <p style="margin-top:0;">&copy; Alberto Guillermo de la Cruz</span></p>
     </div>
 
     <script>
