--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -113,7 +113,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-postcard
 
 <p>The designs were inspired by a mix of Puerto Rican and Japanese culture, hence the name Arroz Blanco (since both Japanese and Puerto Rican cuisine have a heavy emphasis on white rice). I also set up a basic website and social media campaign promoting the products. My expectations with the brand weren’t in line with the reality. I wanted to be completely sold out of my product by the end of Comic Con, instead I was able to sell a quarter of my merchandise. I learned from the experience that I didn’t want to get into the t-shirt business, however it was because of this project I first started becoming interested in web design, collaborating with a programmer friend of mine in making the website. In designing the website I started reading up on responsive web design and usability and in the process became interested in user experience.</p>
     <div id="footer">
-      <p>&copy; Alberto Guillermo de la Cruz</span></p>
+      <p style="margin-top:0;">&copy; Alberto Guillermo de la Cruz</span></p>
     </div>
 
     <script>
