--- a/resume/index.html
+++ b/resume/index.html
@@ -193,7 +193,7 @@
 </div>
 
     <div id="footer">
-      <p>&copy; Alberto Guillermo de la Cruz</span></p>
+      <p style="margin-top:0;">&copy; Alberto Guillermo de la Cruz</span></p>
     </div>
 
     <script>
